# GestureRecognition

./: CMakeLists.txt  Point.h  README.md  diff_clic.cpp  gesture.h  hand_detect.cpp  latest.cpp  my_code.cpp  utils.h
